# vortex-chess-engine

./: .gitignore  AGENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  ORIGINAL_REQUEST.md  PHASE_10_COMPLETE.md  PHASE_9_COMPLETE.md  README.md  TESTING_SETUP_COMPLETE.md  audit_report.md  diagnostic_report.md  fix_mod2.py  package.json  plan.md  play_match.py  refactor_mod.py  run_match.js  test-debug.ts  test-debug2.ts  test-debug3.ts  test-wasm.js  test_board.js  test_e4c5.js  test_eval.ts  test_fallback.js  test_interactive.js  tsconfig.json  v1_engine.sh  vite.config.ts  vortex.sh
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.gemini/: instructions.md
.github/: copilot-instructions.md
.opencode/: opencode.json
docs/: ALPHAGO_VORTEX_ENGINEERING_GUIDE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  nnue_architecture.md
scripts/: bulk_match.py  curate_data.py  dataset.epd  debug-moves.js  debug-moves.ts  (+10 more)
vortex-core/: Cargo.toml
vortex-core/src/: attacks.rs  bitboard.rs  board.rs  contempt.rs  evaluate.rs  fen.rs  lib.rs  magic.rs  move_core.rs  movegen.rs  nnue.rs  search.rs  state.rs  tt.rs  types.rs  zobrist.rs
vortex-core/src/nnue/: accumulator.rs  features.rs  forward.rs  network.rs  serialize.rs  threat_map.rs  weights.rs
vortex-core/src/search/: aspiration.rs  id.rs  mod.rs  swindle.rs  variance.rs
vortex-core/tests/: board_test.rs  nnue_test.rs  search_test.rs
(+260 files in other folders)
