[package]
name = "vortex-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "=0.3.69"
wasm-bindgen = "=0.2.92"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
